style: avoid label jumps

--- a/app/ui/range.module.css
+++ b/app/ui/range.module.css
@@ -1,10 +1,12 @@
 .rangeContainer {
-  display: flex;
+  display: grid;
+  grid-template-columns: 100px 1fr 100px;
+  column-gap: 20px;
   align-items: center;
 }
 
 .minValue {
-  margin-right: 20px;
+  justify-self: end;
   font-size: 30px;
 }
 
@@ -39,6 +41,5 @@
 }
 
 .maxValue {
-  margin-left: 20px;
   font-size: 30px;
 }
